--- a/index.html
+++ b/index.html
@@ -23,7 +23,27 @@
         </nav>
     </header>
 
+    <main>
+        <section class="hero">
+            <h1>Descarga Libros <br> Digitales Gratuitos</h1>
+            <p>Accede a nuestra colección curada de libros digitales de alta calidad. <br>
+                Solo necesitas tu email para comenzar a descargar.
+            </p>
+            <div class="buttons">
+                <a class="btn-explorar" href="">Explorar Libros</a>
+                <a class="btn-categorias" href="">Ver Categorias</a>
+            </div>
+        </section>
 
+        <section class="libros-destacados">
+            <h2>Libros Destacados</h2>
+            <p>Los más descargados de nuestra colección.</p>
+            <div class="libros-container">
+                <div class="card-libro"></div>
+            </div>
+        </section>
+
+    </main>
 
     <script src="js/js.js"></script>
 </body>
