--- a/index.html
+++ b/index.html
@@ -39,8 +39,84 @@
             <h2>Libros Destacados</h2>
             <p>Los más descargados de nuestra colección.</p>
             <div class="libros-container">
-                <div class="card-libro"></div>
+                <div class="card-libro">
+                    <img src="./public/img/javascript.jpeg" width="250" height="350" alt="Manual Javascript">
+                    <div class="categoria-rating">
+                        <span class="categoria">Tecnología</span>
+                        <span>4.6 ★</span>
+                    </div>
+                    <div class="info-libro">
+                        <h3>Manual de Javascript</h3>
+                        <h4>Patrones y Mejores Prácticas</h4>
+                        <div class="info-autor">
+                            <span>Miguel Angel Alvarez</span>
+                            <span>316 Páginas</span>
+                        </div>
+                        <div class="descargas">
+                            <button>Descagar</button>
+                        </div>
+                    </div>
+                </div>
+                 <div class="card-libro">
+                    <img src="./public/img/javascript.jpeg" width="250" height="350" alt="Manual Javascript">
+                    <div class="categoria-rating">
+                        <span class="categoria">Tecnología</span>
+                        <span>4.6 ★</span>
+                    </div>
+                    <div class="info-libro">
+                        <h3>Manual de Javascript</h3>
+                        <h4>Patrones y Mejores Prácticas</h4>
+                        <div class="info-autor">
+                            <span>Miguel Angel Alvarez</span>
+                            <span>316 Páginas</span>
+                        </div>
+                        <div class="descargas">
+                            <button>Descagar</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-libro">
+                    <img src="./public/img/javascript.jpeg" width="250" height="350" alt="Manual Javascript">
+                    <div class="categoria-rating">
+                        <span class="categoria">Tecnología</span>
+                        <span>4.6 ★</span>
+                    </div>
+                    <div class="info-libro">
+                        <h3>Manual de Javascript</h3>
+                        <h4>Patrones y Mejores Prácticas</h4>
+                        <div class="info-autor">
+                            <span>Miguel Angel Alvarez</span>
+                            <span>316 Páginas</span>
+                        </div>
+                        <div class="descargas">
+                            <button>Descagar</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-libro">
+                    <img src="./public/img/javascript.jpeg" width="250" height="350" alt="Manual Javascript">
+                    <div class="categoria-rating">
+                        <span class="categoria">Tecnología</span>
+                        <span>4.6 ★</span>
+                    </div>
+                    <div class="info-libro">
+                        <h3>Manual de Javascript</h3>
+                        <h4>Patrones y Mejores Prácticas</h4>
+                        <div class="info-autor">
+                            <span>Miguel Angel Alvarez</span>
+                            <span>316 Páginas</span>
+                        </div>
+                        <div class="descargas">
+                            <button>Descagar</button>
+                        </div>
+                    </div>
+                </div>
+                               
+
+
             </div>
+
+
         </section>
 
     </main>
