--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <header class="header">
         <div class="logo">
+            <img src="./public/img/book-open.png" alt="">
             <h1>Biblioteca Digital</h1>
         </div>
         <nav>
@@ -119,8 +120,30 @@
 
         </section>
 
+        <section class="estadisticas">
+            <div>
+                <h3>50+</h3>
+                <p>Libros disponibles</p>
+            </div>
+            <div>
+                <h3>10.000</h3>
+                <p>Descargas totales</p>
+            </div>
+            <div>
+                <h3>4.8★</h3>
+                <p>Calificación promedio</p>
+            </div>
+        </section>
+
     </main>
 
+    <footer>
+        <span>
+            <img src="./public/img/book-open.png" alt="Logo">
+            <h3>BiblioDigital - 2025</h3>
+        </span>
+        <p>Democratizando el acceso al conocimiento a través de libros digitales gratuitos.</p>
+    </footer>
     <script src="js/js.js"></script>
 </body>
 
