--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
                 Solo necesitas tu email para comenzar a descargar.
             </p>
             <div class="buttons">
-                <a class="btn-explorar" href="">Explorar Libros</a>
-                <a class="btn-categorias" href="">Ver Categorias</a>
+                <a class="btn-explorar" href="index.html">Explorar Libros</a>
+                <a class="btn-categorias" href="#destacados">Ver Destacados</a>
             </div>
         </section>
 
-        <section class="libros-destacados">
+        <section id="destacados" class="libros-destacados">
             <h2>Libros Destacados</h2>
             <p>Los más descargados de nuestra colección.</p>
             <div class="libros-container">
