--- a/libros.html
+++ b/libros.html
@@ -17,7 +17,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#inicio">Inicio</a>
+                    <a href="index.html">Inicio</a>
                     <a href="libros.html">Libros</a>
                 </li>
             </ul>
