--- a/libros.html
+++ b/libros.html
@@ -56,7 +56,72 @@
             </div>
         </section>
 
-        <section class="biblioteca"></section>
+        <section class="biblioteca">
+
+            <div class="libro">
+                <img src="./public/img/healthy-cooking-recipe-book-cover-colorful.jpg" alt="">
+               <div class="info-libro">
+                <span class="categoria">
+                    <p>Cocina</p>
+                </span>
+                <h4>Recetas para la comida</h4>
+                <p>Recetas para preparar la mejor comida.</p>
+               </div>
+               <div class="calificaciones-autor">
+                <h5>Giovany Laterdo</h5>
+                <p>4.5 ★</p>
+               </div>
+               <a href="">Descargar</a>
+            </div>
+
+            <div class="libro">
+                <img src="./public/img/healthy-cooking-recipe-book-cover-colorful.jpg" alt="">
+               <div class="info-libro">
+                <span class="categoria">
+                    <p>Cocina</p>
+                </span>
+                <h4>Recetas para la comida</h4>
+                <p>Recetas para preparar la mejor comida.</p>
+               </div>
+               <div class="calificaciones-autor">
+                <h5>Giovany Laterdo</h5>
+                <p>4.5 ★</p>
+               </div>
+               <a href="">Descargar</a>
+            </div>
+
+            <div class="libro">
+                <img src="./public/img/healthy-cooking-recipe-book-cover-colorful.jpg" alt="">
+               <div class="info-libro">
+                <span class="categoria">
+                    <p>Cocina</p>
+                </span>
+                <h4>Recetas para la comida</h4>
+                <p>Recetas para preparar la mejor comida.</p>
+               </div>
+               <div class="calificaciones-autor">
+                <h5>Giovany Laterdo</h5>
+                <p>4.5 ★</p>
+               </div>
+               <a href="">Descargar</a>
+            </div>
+
+            <div class="libro">
+                <img src="./public/img/healthy-cooking-recipe-book-cover-colorful.jpg" alt="">
+               <div class="info-libro">
+                <span class="categoria">
+                    <p>Cocina</p>
+                </span>
+                <h4>Recetas para la comida</h4>
+                <p>Recetas para preparar la mejor comida.</p>
+               </div>
+               <div class="calificaciones-autor">
+                <h5>Giovany Laterdo</h5>
+                <p>4.5 ★</p>
+               </div>
+               <a href="">Descargar</a>
+            </div>
+        </section>
 
        
     </main>
