--- a/index.html
+++ b/index.html
@@ -112,6 +112,43 @@
                         </div>
                     </div>
                 </div>
+                <div class="card-libro">
+                    <img src="./public/img/javascript.jpeg" width="250" height="350" alt="Manual Javascript">
+                    <div class="categoria-rating">
+                        <span class="categoria">Tecnología</span>
+                        <span>4.6 ★</span>
+                    </div>
+                    <div class="info-libro">
+                        <h3>Manual de Javascript</h3>
+                        <h4>Patrones y Mejores Prácticas</h4>
+                        <div class="info-autor">
+                            <span>Miguel Angel Alvarez</span>
+                            <span>316 Páginas</span>
+                        </div>
+                        <div class="descargas">
+                            <button>Descagar</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-libro">
+                    <img src="./public/img/javascript.jpeg" width="250" height="350" alt="Manual Javascript">
+                    <div class="categoria-rating">
+                        <span class="categoria">Tecnología</span>
+                        <span>4.6 ★</span>
+                    </div>
+                    <div class="info-libro">
+                        <h3>Manual de Javascript</h3>
+                        <h4>Patrones y Mejores Prácticas</h4>
+                        <div class="info-autor">
+                            <span>Miguel Angel Alvarez</span>
+                            <span>316 Páginas</span>
+                        </div>
+                        <div class="descargas">
+                            <button>Descagar</button>
+                        </div>
+                    </div>
+                </div>
                                
 
 
