--- a/libros.html
+++ b/libros.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/libro.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/book.css">
+    <title>Libros</title>
 </head>
 
 <body>
