--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
     <header class="header">
         <div class="logo">
-            <img src="./public/img/book-open.png" alt="">
+            <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 768 614">
+                <path
+                    d="M0 601V169s54-81 196-81c143 0 188 77 188 77s45-77 188-77c142 0 196 81 196 81v432s-95-70-198-70c-102 0-186 75-186 75s-84-75-186-75C95 531 0 601 0 601zm65-415v314s41-31 139-31c97 0 148 58 148 58V200s-69-50-156-50c-86 0-131 36-131 36zm351 14v327s48-58 148-58c99 0 139 31 139 31V186s-45-36-131-36c-87 0-156 50-156 50z" />
+            </svg>
             <h1>Biblioteca Digital</h1>
         </div>
         <nav>
@@ -58,7 +61,7 @@
                         </div>
                     </div>
                 </div>
-                 <div class="card-libro">
+                <div class="card-libro">
                     <img src="./public/img/javascript.jpeg" width="250" height="350" alt="Manual Javascript">
                     <div class="categoria-rating">
                         <span class="categoria">Tecnología</span>
@@ -149,7 +152,7 @@
                         </div>
                     </div>
                 </div>
-                               
+
 
 
             </div>
