--- a/libros.html
+++ b/libros.html
@@ -11,7 +11,10 @@
 <body>
     <header class="header">
         <div class="logo">
-            <img src="./public/img/book-open.png" alt="">
+            <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 768 614">
+                <path
+                    d="M0 601V169s54-81 196-81c143 0 188 77 188 77s45-77 188-77c142 0 196 81 196 81v432s-95-70-198-70c-102 0-186 75-186 75s-84-75-186-75C95 531 0 601 0 601zm65-415v314s41-31 139-31c97 0 148 58 148 58V200s-69-50-156-50c-86 0-131 36-131 36zm351 14v327s48-58 148-58c99 0 139 31 139 31V186s-45-36-131-36c-87 0-156 50-156 50z" />
+            </svg>
             <h1>Biblioteca Digital</h1>
         </div>
         <nav>
@@ -37,7 +40,7 @@
             </div>
 
             <div class="filtros-input">
-                
+
                 <input type="text" placeholder="Buscar por título, autor o categoría">
                 <select name="" id="">
                     <option value="todas">Todas</option>
@@ -60,70 +63,70 @@
 
             <div class="libro">
                 <img src="./public/img/healthy-cooking-recipe-book-cover-colorful.jpg" alt="">
-               <div class="info-libro">
-                <span class="categoria">
-                    <p>Cocina</p>
-                </span>
-                <h4>Recetas para la comida</h4>
-                <p>Recetas para preparar la mejor comida.</p>
-               </div>
-               <div class="calificaciones-autor">
-                <h5>Giovany Laterdo</h5>
-                <p>4.5 ★</p>
-               </div>
-               <a href="">Descargar</a>
+                <div class="info-libro">
+                    <span class="categoria">
+                        <p>Cocina</p>
+                    </span>
+                    <h4>Recetas para la comida</h4>
+                    <p>Recetas para preparar la mejor comida.</p>
+                </div>
+                <div class="calificaciones-autor">
+                    <h5>Giovany Laterdo</h5>
+                    <p>4.5 ★</p>
+                </div>
+                <a href="">Descargar</a>
             </div>
 
             <div class="libro">
                 <img src="./public/img/healthy-cooking-recipe-book-cover-colorful.jpg" alt="">
-               <div class="info-libro">
-                <span class="categoria">
-                    <p>Cocina</p>
-                </span>
-                <h4>Recetas para la comida</h4>
-                <p>Recetas para preparar la mejor comida.</p>
-               </div>
-               <div class="calificaciones-autor">
-                <h5>Giovany Laterdo</h5>
-                <p>4.5 ★</p>
-               </div>
-               <a href="">Descargar</a>
+                <div class="info-libro">
+                    <span class="categoria">
+                        <p>Cocina</p>
+                    </span>
+                    <h4>Recetas para la comida</h4>
+                    <p>Recetas para preparar la mejor comida.</p>
+                </div>
+                <div class="calificaciones-autor">
+                    <h5>Giovany Laterdo</h5>
+                    <p>4.5 ★</p>
+                </div>
+                <a href="">Descargar</a>
             </div>
 
             <div class="libro">
                 <img src="./public/img/healthy-cooking-recipe-book-cover-colorful.jpg" alt="">
-               <div class="info-libro">
-                <span class="categoria">
-                    <p>Cocina</p>
-                </span>
-                <h4>Recetas para la comida</h4>
-                <p>Recetas para preparar la mejor comida.</p>
-               </div>
-               <div class="calificaciones-autor">
-                <h5>Giovany Laterdo</h5>
-                <p>4.5 ★</p>
-               </div>
-               <a href="">Descargar</a>
+                <div class="info-libro">
+                    <span class="categoria">
+                        <p>Cocina</p>
+                    </span>
+                    <h4>Recetas para la comida</h4>
+                    <p>Recetas para preparar la mejor comida.</p>
+                </div>
+                <div class="calificaciones-autor">
+                    <h5>Giovany Laterdo</h5>
+                    <p>4.5 ★</p>
+                </div>
+                <a href="">Descargar</a>
             </div>
 
             <div class="libro">
                 <img src="./public/img/healthy-cooking-recipe-book-cover-colorful.jpg" alt="">
-               <div class="info-libro">
-                <span class="categoria">
-                    <p>Cocina</p>
-                </span>
-                <h4>Recetas para la comida</h4>
-                <p>Recetas para preparar la mejor comida.</p>
-               </div>
-               <div class="calificaciones-autor">
-                <h5>Giovany Laterdo</h5>
-                <p>4.5 ★</p>
-               </div>
-               <a href="">Descargar</a>
+                <div class="info-libro">
+                    <span class="categoria">
+                        <p>Cocina</p>
+                    </span>
+                    <h4>Recetas para la comida</h4>
+                    <p>Recetas para preparar la mejor comida.</p>
+                </div>
+                <div class="calificaciones-autor">
+                    <h5>Giovany Laterdo</h5>
+                    <p>4.5 ★</p>
+                </div>
+                <a href="">Descargar</a>
             </div>
         </section>
 
-       
+
     </main>
 
     <script src="./js/js.js"></script>
